apps/alt-default-ops-console/k8s/ingress.magarathea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alt-default-ops-console
  namespace: alt-default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,X-Auth-Request-Email,X-Auth-Request-User,X-Forwarded-Access-Token"
spec:
  tls:
    - hosts:
        - magarathea.ddns.net
      secretName: magarathea-ddns-net-tls
  rules:
    - host: magarathea.ddns.net
      http:
        paths:
          - path: /alt-default-ops(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: alt-default-ops-console
                port:
                  number: 80
